--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container">
 	<div class="jumbotron">
-		<h1>Trains On Time</h1>
+		<h1 class="text-center">Trains On Time</h1>
 	</div>
 	<table class="table table-bordered">
 		<tr>
