--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="jumbotron">
 		<h1 class="text-center">Trains On Time</h1>
 	</div>
-	<table class="table table-bordered">
+	<table class="table table-striped table-hover">
 		<tr>
 		<h4>our train schedule</h4>
 		</tr>
