database responding properly again, adding info from scheduler input

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
 	<title>Trains On Time</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -76,7 +77,11 @@
       <button class="btn btn-primary" id="addTrainBtn" type="submit">add new train data</button>
     </form>
 </div>
-	
+
+<script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+
+<script src="assets/javascript/trains.js"></script>
+
 </body>
 
 </html>
