working well, but with the Moment.js stuff still to go

--- a/index.html
+++ b/index.html
@@ -16,46 +16,19 @@
 	<div class="jumbotron">
 		<h1 class="text-center">Trains On Time</h1>
 	</div>
-	<table class="table table-striped table-hover">
-		<tr>
-		<h4>our train schedule</h4>
-		</tr>
-		<tr>
-			<th>train</th>
-			<th>destination</th>
-			<th>frequency (minutes)</th>
-			<th>next arrival</th>
-			<th>minutes away</th>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-	</table>
+	<table class="table table-striped table-hover" id="trainTable">
+		<thead>
+	        <tr>
+	          <th>train</th>
+	          <th>destination</th>
+	          <th>frequency (in minutes)</th>
+	          <th>next arrival</th>
+	          <th>minutes away</th>
+	        </tr>
+	      </thead>
+	      <tbody>
+	      </tbody>
+    </table>
 
 	<form>
       <div class="form-group">
