--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Trains On Time</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 </head>
@@ -14,11 +15,11 @@
 <body>
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="jumbotron" id="topper">
 		<h1 class="text-center">Trains On Time</h1>
 	</div>
 	<table class="table table-striped table-hover" id="trainTable">
-		<thead>
+		<thead id="tableHead">
 	        <tr>
 	          <th>train</th>
 	          <th>destination</th>
@@ -31,7 +32,7 @@
 	      </tbody>
     </table>
 
-	<form>
+	<form id="ourForm">
       <div class="form-group">
         <label for="train-name">train name</label>
         <input class="form-control" id="trainNameAdd" type="text">
